--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -1,29 +1,22 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
-    <!--
-        Personnalisez la stratégie de sécurité de contenu dans la balise meta ci-dessous selon vos besoins. Ajoutez 'unsafe-inline' à default-src pour activer JavaScript directement dans les lignes.
-        Pour obtenir des détails, consultez http://go.microsoft.com/fwlink/?LinkID=617521
-    -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-        
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>DevoirPhoneGap</title>
+        <title>DevoirPhoneGap - Liste de cadeaux</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connexion à l'appareil</p>
-                <p class="event received">L'appareil est prêt</p>
+        Il y a une erreur dans le programme
+
+        <script id="page-liste-cadeau">
+            <div>
+                <h1>
+                    liste des cadeaux
+                </h1>
+                <ul id="liste-cadeau"></ul>
             </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="scripts/platformOverrides.js"></script>
-        <script type="text/javascript" src="scripts/index.js"></script>
+        </script>
+
+        <script type="text/javascript" charset="utf-8" src="libs/jquery.js"></script>
+        <script src="actions/application.js"></script>
     </body>
 </html>
