--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -1,6 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+        <meta name="format-detection" content="telephone=no">
+        <meta name="msapplication-tap-highlight" content="no">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>DevoirPhoneGap - Liste de cadeaux</title>
     </head>
@@ -17,6 +22,7 @@
         </script>
 
         <script type="text/javascript" charset="utf-8" src="libs/jquery.js"></script>
+        <script src="actions/vues/ListeCadeauxVue.js"></script>
         <script src="actions/application.js"></script>
     </body>
 </html>
