--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -22,6 +22,7 @@
         </script>
 
         <script type="text/javascript" charset="utf-8" src="libs/jquery.js"></script>
+        <script src="actions/donnees/CadeauDAO.js"></script>
         <script src="actions/vues/ListeCadeauxVue.js"></script>
         <script src="actions/application.js"></script>
     </body>
