mise en page d'un cadeau

--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -21,6 +21,12 @@
             </div>
         </script>
 
+        <script id="page-cadeau">
+            <h1 id="cadeau-nom"></h1>
+            <h2 id="cadeau-marque"></h2>
+            <p id="cadeau-description"></p>
+        </script>
+
         <script type="text/javascript" charset="utf-8" src="libs/jquery.js"></script>
         <script src="actions/donnees/CadeauDAO.js"></script>
         <script src="actions/vues/ListeCadeauxVue.js"></script>
