chaque cadeau a bien sa page detail

--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -30,6 +30,7 @@
         <script type="text/javascript" charset="utf-8" src="libs/jquery.js"></script>
         <script src="actions/donnees/CadeauDAO.js"></script>
         <script src="actions/vues/ListeCadeauxVue.js"></script>
+        <script src="actions/vues/CadeauVue.js"></script>
         <script src="actions/application.js"></script>
     </body>
 </html>
