--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -27,7 +27,38 @@
             <p id="cadeau-description"></p>
         </script>
 
+        <script id="page-ajouter-cadeau" type="text/plain">
+            <h1>Ajouter un cadeau</h1>
+            <form id="formulaire-ajouter">
+                <fieldset>
+                    <legend>Identification du cadeau</legend>
+                    <div>
+                        <label for="nom">Nom</label>
+                        <input type="text" name="nom" id="nom" />
+                    </div>
+                    <div>
+                        <label for="marque">Marque</label>
+                        <input type="text" name="marque" id="marque" />
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <legend>D&eacute;tails sur le cadeau</legend>
+                    <div>
+                        <label for="description">Description</label>
+                        <textarea name="description" id="description"></textarea>
+                    </div>
+                    <div>
+                        <label for="prix">Prix</label>
+                        <input type="text" name="prix" id="prix" />
+                    </div>
+                </fieldset>
+                <input type="submit" value="Ajouter le cadeau" />
+            </form>
+            <a href="#">Annuler et revenir &agrave; la liste</a>
+        </script>
+
         <script type="text/javascript" charset="utf-8" src="libs/jquery.js"></script>
+        <script src="action/modeles/Cadeau.js"></script>
         <script src="actions/donnees/CadeauDAO.js"></script>
         <script src="actions/vues/ListeCadeauxVue.js"></script>
         <script src="actions/vues/CadeauVue.js"></script>
