modificationd des donnees en echafaud + affichage du prix

--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -26,6 +26,7 @@
             <h1 id="cadeau-nom"></h1>
             <h2 id="cadeau-marque"></h2>
             <p id="cadeau-description"></p>
+            <p id="cadeau-prix"></p>
         </script>
 
         <script id="page-ajouter-cadeau" type="text/plain">
