--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -27,6 +27,7 @@
             <h2 id="cadeau-marque"></h2>
             <p id="cadeau-description"></p>
             <p id="cadeau-prix"></p>
+            <ul id="m-cadeau"></ul>
         </script>
 
         <script id="page-ajouter-cadeau" type="text/plain">
@@ -59,12 +60,43 @@
             <a href="#">Annuler et revenir &agrave; la liste</a>
         </script>
 
+        <script id="page-modifier-cadeau" type="text/plain">
+            <h1>Modifier un cadeau</h1>
+            <form id="formulaire-modifier">
+                <fieldset>
+                    <legend>Identification du cadeau</legend>
+                    <div>
+                        <label for="nom">Nom</label>
+                        <input type="text" name="nom" id="nom" />
+                    </div>
+                    <div>
+                        <label for="marque">Marque</label>
+                        <input type="text" name="marque" id="marque" />
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <legend>D&eacute;tails sur le cadeau</legend>
+                    <div>
+                        <label for="description">Description</label>
+                        <textarea name="description" id="description"></textarea>
+                    </div>
+                    <div>
+                        <label for="prix">Prix</label>
+                        <input type="text" name="prix" id="prix" />
+                    </div>
+                </fieldset>
+                <input type="submit" value="Modifier le cadeau" />
+            </form>
+            <a href="#">Annuler et revenir &agrave; la liste</a>
+        </script>
+
         <script type="text/javascript" charset="utf-8" src="libs/jquery.js"></script>
         <script src="actions/modeles/Cadeau.js"></script>
         <script src="actions/donnees/CadeauDAO.js"></script>
         <script src="actions/vues/ListeCadeauxVue.js"></script>
         <script src="actions/vues/CadeauVue.js"></script>
         <script src="actions/vues/AjouterCadeauVue.js"></script>
+        <script src="actions/vues/ModifierCadeauVue.js"></script>
         <script src="actions/application.js"></script>
     </body>
 </html>
