--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -55,9 +55,9 @@
                         <input type="text" name="prix" id="prix" />
                     </div>
                 </fieldset>
-                <input class="btn_back" type="submit" value="Ajouter le cadeau" />
+                <input class="submit-button" type="submit" value="Ajouter le cadeau" />
             </form>
-            <a href="#">Annuler et revenir &agrave; la liste</a>
+            <a class="btn_back" href="#">Annuler et revenir &agrave; la liste</a>
         </script>
 
         <script id="page-modifier-cadeau" type="text/plain">
@@ -85,7 +85,7 @@
                         <input type="text" name="prix" id="prix" />
                     </div>
                 </fieldset>
-                <input type="submit" class="btn_modifier" value="Modifier le cadeau" />
+                <input type="submit" class="btn_modifier" value="Save" />
             </form>
             <a class="btn_back" href="#">Annuler et revenir &agrave; la liste</a>
         </script>
