--- a/DevoirPhoneGap/www/index.html
+++ b/DevoirPhoneGap/www/index.html
@@ -1,11 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>DevoirPhoneGap - Liste de cadeaux</title>
     </head>
@@ -57,7 +54,6 @@
                 </fieldset>
                 <input class="submit-button" type="submit" value="Ajouter le cadeau" />
             </form>
-            <a class="btn_back" href="#">Annuler et revenir &agrave; la liste</a>
         </script>
 
         <script id="page-modifier-cadeau" type="text/plain">
@@ -87,7 +83,6 @@
                 </fieldset>
                 <input type="submit" class="btn_modifier" value="Save" />
             </form>
-            <a class="btn_back" href="#">Annuler et revenir &agrave; la liste</a>
         </script>
 
         <script type="text/javascript" charset="utf-8" src="libs/jquery.js"></script>
